<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="response_neutral">OK</string>
    <string name="response_positive">Yes</string>
    <string name="response_negative">No</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_survey">Surveys</string>
    <string name="title_activity_login">Sign in</string>
    <string name="questions">Take me to the questions!</string>
    <string name="reports">Take me to the reports!</string>

    <!-- Strings related to Boundary selection -->
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="cluster">Cluster</string>
    <string name="school">School</string>
    <string name="prompt_district">Select District</string>
    <string name="prompt_block">Select Block</string>
    <string name="prompt_cluster">Select Cluster</string>
    <string name="prompt_school">Select School</string>
    <string name="prompt_user_type">Select Respondent Type</string>

    <!-- Strings related to login -->
    <string name="prompt_register">Not a user yet?</string>
    <string name="prompt_login">Already a user?</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="changePassword">Change password</string>
    <string name="forgotPassword">Forgot password?</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="title_activity_question">Questions</string>

    <!-- Dialog button strings -->
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">OK</string>

    <!--Strings for the change password dialog -->
    <string name="dialog_old_password">Old Password</string>
    <string name="dialog_new_password">New Password</string>
    <string name="dialog_reenter_new_password">Re-enter new password</string>
    <string name="dialog_error_password_mismatch">Passwords do not match. Please re-enter</string>
    <!-- Strings for sign up activity -->
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="prompt_enter_email">E-MAIL/MOBILE NUMBER/ಇಮೇಲ್ ವಿಳಾಸ/ಮೊಬೈಲ್ ಸಂಖ್ಯೆ</string>
    <string name="prompt_enter_password">PASSWORD/ಗುಪ್ತಪದ</string>
    <string name="prompt_verify_password">RE-ENTER PASSWORD/ಗುಪ್ತಪದ ಪರಿಶೀಲಿಸಿ </string>
    <string name="first_name"> FIRST NAME/ಮೊದಲ ಹೆಸರು </string>
    <string name="last_name">LAST NAME/ ಕೊನೆಯ ಹೆಸರು</string>
    <string name="mobile_number">MOBILE NUMBER/ ಮೊಬೈಲ್ ಸಂಖ್ಯೆ</string>
    <string name="action_register">REGISTER</string>

    <string name="title_activity_boundary_selection">Choose your Boundary</string>

    <!-- survey activity strings -->
    <string name="new_response">New Response</string>
    <string name="generate_report">Create Report</string>
    <string name="list_stories">All Stories</string>

    <!--Story list activity-->
    <string name="meta_medium">Total Answers: %1$s</string>
    <string name="meta_small">Created by %1$s on %2$s</string>

    <string name="meta_total">Total Stories: %1$d</string>
    <string name="meta_daterange">From %1$s to %2$s</string>
    <string name="meta_total_by_user">Total Stories By You: %1$d</string>
    <string name="meta_total_by_user_nsy">Your Stories Not Synced: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backtologin">BACK TO <u>LOGIN</u></string>

    <string name="prompt_start_date">Start Date</string>
    <string name="prompt_end_date">End Date</string>

    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_unknown">Don\'t Know</string>

    <string name="prompt_new_rsponse">Do you want to record another response?</string>

    <!--empty response-->
    <string name="survey_empty_response_title">No Question Answered!</string>
    <string name="survey_empty_response_body">You must answer one or more questions to submit a story.</string>
</resources>
