<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.org.klp.kontact.Reports">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_district"/>
            <Spinner
                android:id="@+id/select_district_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:prompt="@string/prompt_district">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_block"/>
            <Spinner
                android:id="@+id/select_block_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_cluster"/>
            <Spinner
                android:id="@+id/select_cluster_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/report_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_start_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"/>
                <EditText
                    android:id="@+id/report_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_end_date"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:clickable="false"/>
            </LinearLayout>
            <Button
                android:id="@+id/bt_display_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"/>
            <ListView
                android:id="@+id/school_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">
            </ListView>
        </LinearLayout>


    </ScrollView>



</RelativeLayout>
