<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.org.klp.kontact.BoundarySelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/survey_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGreySteel"/>
        <Button
            android:id="@+id/select_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"/>
        <Button
            android:id="@+id/select_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block"/>
        <Button
            android:id="@+id/select_cluster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cluster"/>
        <Button
            android:id="@+id/select_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGreySteel"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewChosenSchool"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGreySteel"/>

        <Button
            android:id="@+id/questions_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questions"/>
    </LinearLayout>

</RelativeLayout>
