<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:id="@+id/textViewQuestion"
        style="@style/Base.TextAppearance.AppCompat.Medium">

    </TextView>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:measureWithLargestChild="false"
        android:weightSum="3"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/rgQuestion">
        <RadioButton android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes"
            android:layout_weight="1"/>
        <RadioButton android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no"
            android:layout_weight="1" />
        <RadioButton android:id="@+id/radioNoAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_unknown"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>