<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="match_parent"
              android:orientation="vertical">


        <EditText
            android:id="@+id/oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/colorBrandOrange"
            android:hint="@string/dialog_old_password"
            android:imeActionId="@+id/oldpassword"
            android:imeActionLabel="@string/dialog_old_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="normal"
            android:typeface="serif"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:elegantTextHeight="true"
            android:textAlignment="textStart"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_new_password"
            android:imeActionId="@+id/newpassword"
            android:imeActionLabel="@string/dialog_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="normal"
            android:typeface="serif"
            android:textSize="15dp"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/reenterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_reenter_new_password"
            android:imeActionId="@+id/reenterpassword"
            android:imeActionLabel="@string/dialog_reenter_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="normal"
            android:typeface="serif"
            android:textSize="15dp"
            android:fontFamily="sans-serif"/>

</LinearLayout>
